testsuite/tests/parser/should_fail/pfail022.alan
hello() : proc
  foo : int;
{
  if(true
      foo =4;
  foo = 3;
}
