testsuite/tests/parser/should_fail/pfail022.stderr
pfail022.alan:5:7: Error: Parse error on input `foo'
	Probably missing `)'

